-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.0 Alpha
-
Tested on Ubuntu 20.04 x64
-
696d94b132b2f352b5e6b889ad91c2437417fae8
Examples fail to compile:
/Examples/Qt-6.0.0/quick/rendercontrol/rendercontrol_opengl
/Examples/Qt-6.0.0/quick/scenegraph/custommaterial
/Examples/Qt-6.0.0/quick/scenegraph/graph
/Examples/Qt-6.0.0/quick/scenegraph/vulkanunderqm
/Examples/Qt-6.0.0/quick/scenegraph/twotextureproviders
/Examples/Qt-6.0.0/quick/scenegraph/fboitem
/Examples/Qt-6.0.0/quick/scenegraph/threadedanimation
/Examples/Qt-6.0.0/quick/scenegraph/customgeometry
/Examples/Qt-6.0.0/vulkan/hellovulkanwindow
/Examples/Qt-6.0.0/vulkan/hellovulkancubes
/Examples/Qt-6.0.0/vulkan/hellovulkantriangle
/Examples/Qt-6.0.0/vulkan/hellovulkanwidget
/Examples/Qt-6.0.0/vulkan/hellovulkantexture
/Examples/Qt-6.0.0/vulkan/hellovulkancubes
/Examples/Qt-6.0.0/vulkan/hellovulkantriangle
/Examples/Qt-6.0.0/vulkan/hellovulkanwidget
/Examples/Qt-6.0.0/vulkan/hellovulkantexture
Builds fail with error:
[ 6%] Automatic MOC and UIC for target rendercontrol_opengl
[ 26%] Built target rendercontrol_opengl_autogen
[ 33%] Building CXX object CMakeFiles/rendercontrol_opengl.dir/window_singlethreaded.cpp.o
In file included from /home/qt/RTA/qt5/6.0.0/gcc_64/include/QtGui/QVulkanInstance:1,
from /home/qt/RTA/qt5/6.0.0/gcc_64/include/QtQuick/qquickrendertarget.h:47,
from /home/qt/RTA/qt5/6.0.0/gcc_64/include/QtQuick/QQuickRenderTarget:1,
from /home/qt/RTA/qt5/Examples/Qt-6.0.0/quick/rendercontrol/rendercontrol_opengl/window_singlethreaded.cpp:67:
/home/qt/RTA/qt5/6.0.0/gcc_64/include/QtGui/qvulkaninstance.h:56:10: fatal error: vulkan/vulkan.h: No such file or directory
56 | #include <vulkan/vulkan.h>
| ^~~~~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/rendercontrol_opengl.dir/build.make:137: CMakeFiles/rendercontrol_opengl.dir/window_singlethreaded.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:96: CMakeFiles/rendercontrol_opengl.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
SHA1: ca02358af27b458739cba29086ff6ad19196d431
- relates to
-
PYSIDE-1726 Error building Qt for Python 6.2.2: Undefined reference to QQuickRenderTarget::fromVulkanImage in QtQuick module
-
- Closed
-